[project]
name = "axio-transport-codex"
version = "0.1.0"
description = "ChatGPT (Codex) OAuth transport for Axio using Responses API"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = ["axio", "aiohttp>=3.11"]

[project.optional-dependencies]
tui = ["textual>=2.1.0"]

[project.entry-points."axio.transport"]
codex = "axio_transport_codex:CodexTransport"

[project.entry-points."axio.transport.settings"]
codex = "axio_transport_codex:CodexSettingsScreen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axio_transport_codex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest-cov>=7.1.0",
]
